<resources>
    <string name="app_name">SpaceX Ракеты</string>
    <string name="first_launch">Первый запуск</string>
    <string name="country">Страна</string>
    <string name="launch_price">Стоимость запуска</string>
    <string name="first_stage">Первая ступень</string>
    <string name="engines_count_first_stage">Количество двигателей</string>
    <string name="fuel_count_first_stage">Количество топлива</string>
    <string name="burn_time_first_stage">Время сгорания</string>
    <string name="second_stage">Вторая ступень</string>
    <string name="engines_count_second_stage">Количество двигателей</string>
    <string name="fuel_count_second_stage">Количество топлива</string>
    <string name="burn_time_second_stage">Время сгорания</string>
    <string name="check_launches">Посмотреть запуски</string>
    <string name="ton">ton</string>
    <string name="sec">sec</string>
    <string name="empty_list_launches">Список пуст</string>
    <string name="back">Назад</string>
    <string name="settings">Настройки</string>
    <string name="close">Закрыть</string>
    <string name="height">Высота</string>
    <string name="diameter">Диаметр</string>
    <string name="mass">Масса</string>
    <string name="leo">Полезная нагрузка</string>
    <string name="m">m</string>
    <string name="ft">ft</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>


    <string name="falcon_heavy">Falcon Heavy</string>
    <string name="string_value">229.6</string>
    <string name="string_test_value">Высота, ft</string>

    <string name="string_test_first_launch">7 февраля, 2018</string>
    <string name="string_test_country">США</string>
    <string name="string_test_price">$90 млн</string>
    <string name="string_test_engines">27</string>
    <string name="string_test_fuel">308,6</string>
    <string name="burn_time">593</string>
    <string name="engines_second_stage">1</string>
    <string name="fuel_second_stage">243,2</string>
    <string name="burn_time_second_stage_value">397</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="launch_name">FalconSat</string>
    <string name="launch_date">2 февраля, 2022</string>

</resources>