<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.rockets_screen.RocketsFragment">

    <ImageView
        android:id="@+id/rocket_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Guideline для определения высоты 35% экрана для imageview-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <!-- NestedScrollView, занимающий оставшиеся 65% экрана -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp">

            <TextView
                android:id="@+id/rocket_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/falcon_heavy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/settings_button"/>

            <ImageView
                android:id="@+id/settings_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rocket_feature_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/rocket_feature_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_button"/>

            <TextView
                android:id="@+id/first_launch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/first_launch"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rocket_feature_rv"/>

            <TextView
                android:id="@+id/first_launch_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_test_first_launch"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@id/settings_button"
                app:layout_constraintTop_toBottomOf="@+id/rocket_feature_rv"/>

            <TextView
                android:id="@+id/country_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/country"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_launch_text"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_test_country"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@id/settings_button"
                app:layout_constraintBottom_toBottomOf="@+id/country_text"/>

            <TextView
                android:id="@+id/launch_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/launch_price"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_text"/>

            <TextView
                android:id="@+id/launch_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_test_price"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toEndOf="@id/settings_button"
                app:layout_constraintBottom_toBottomOf="@+id/launch_price_text"/>


            <!-- Данные первой ступени -->
            <TextView
                android:id="@+id/first_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:text="@string/first_stage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/launch_price_text"/>


            <TextView
                android:id="@+id/engines_count_first_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/engines_count_first_stage"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_stage"/>

            <TextView
                android:id="@+id/engines_count_first_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_test_engines"
                app:layout_constraintStart_toEndOf="@+id/engines_count_first_stage_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/engines_count_first_stage_text"/>


            <TextView
                android:id="@+id/fuel_count_first_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/fuel_count_first_stage"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/engines_count_first_stage_text"/>

            <TextView
                android:id="@+id/fuel_count_first_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/string_test_fuel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_first_stage_text"
                app:layout_constraintBottom_toBottomOf="@+id/fuel_count_first_stage_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/ton"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_first_stage"
                app:layout_constraintBottom_toBottomOf="@+id/fuel_count_first_stage_text"/>


            <TextView
                android:id="@+id/burn_time_first_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/burn_time_first_stage"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_count_first_stage_text"/>

            <TextView
                android:id="@+id/burn_time_first_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/burn_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_first_stage_text"
                app:layout_constraintBottom_toBottomOf="@+id/burn_time_first_stage_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/sec"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/burn_time_first_stage"
                app:layout_constraintBottom_toBottomOf="@+id/burn_time_first_stage_text"/>



            <!-- Данные второй ступени -->
            <TextView
                android:id="@+id/second_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:text="@string/second_stage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/burn_time_first_stage_text"/>


            <TextView
                android:id="@+id/engines_count_second_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/engines_count_second_stage"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/second_stage"/>

            <TextView
                android:id="@+id/engines_count_second_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/engines_second_stage"
                app:layout_constraintStart_toEndOf="@+id/engines_count_second_stage_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/engines_count_second_stage_text"/>


            <TextView
                android:id="@+id/fuel_count_second_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/fuel_count_second_stage"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/engines_count_second_stage_text"/>

            <TextView
                android:id="@+id/fuel_count_second_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/fuel_second_stage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_second_stage_text"
                app:layout_constraintBottom_toBottomOf="@+id/fuel_count_second_stage_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/ton"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_second_stage"
                app:layout_constraintBottom_toBottomOf="@+id/fuel_count_second_stage_text"/>


            <TextView
                android:id="@+id/burn_time_second_stage_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/burn_time_second_stage"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuel_count_second_stage_text"/>

            <TextView
                android:id="@+id/burn_time_second_stage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/burn_time_second_stage_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fuel_count_second_stage_text"
                app:layout_constraintBottom_toBottomOf="@+id/burn_time_second_stage_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="@string/sec"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/burn_time_second_stage"
                app:layout_constraintBottom_toBottomOf="@+id/burn_time_second_stage_text"/>


            <Button
                android:id="@+id/check_launches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/check_launches"
                android:textAllCaps="false"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@+id/burn_time_second_stage_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>